Add a new heading for remembrance

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <h1 id="pageTitle">مسبحة صدقة جارية</h1>
     <h2>عن روح</h2>
     <h2>حرم المرحوم رمضان حلمي</h2>
+    <h2>اللهم ارحمها واغفر لها</h2>
 
     <div id="counter" class="counter" aria-live="polite">0</div>
 
@@ -138,4 +139,4 @@
     })();
   </script>
 </body>
-        </html>
+</html>
